# Bucket_practic

llm_gemma/geo-bronze-main/: .gitignore  README.md  claude_code_prompt_full.md
llm_gemma/geo-bronze-main/examples/tasks/: dsns_mine_chernihiv.yaml  meteo_stations_country.yaml
llm_gemma/geo-bronze-main/src/geo_bronze/: cli.py  config.py  errors.py
llm_llama3/geo-bronze-main/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
llm_llama3/geo-bronze-main/examples/: run_task.py
llm_llama3/geo-bronze-main/examples/tasks/: osm_full_dump_streaming.yaml  osm_landfills_chernihiv.yaml
llm_llama3/geo-bronze-main/src/geo_bronze/: __init__.py  config.py
llm_llama3/geo-bronze-main/src/geo_bronze/agents/: validation.py
llm_llama3/geo-bronze-main/src/geo_bronze/agents/collectors/: arcgis.py  tile.py
llm_llama3/geo-bronze-main/src/geo_bronze/decoders/: hints.py
llm_llama3/geo-bronze-main/src/geo_bronze/models/: __init__.py  response.py
llm_llama3/geo-bronze-main/src/geo_bronze/registry/: __init__.py  registry.py
llm_llama3/geo-bronze-main/src/geo_bronze/storage/: __init__.py
llm_llama3/geo-bronze-main/tests/: conftest.py
llm_llama3/geo-bronze-main/tests/fixtures/: arcgis_query.json  dsns_locations.json
llm_llama3/geo-bronze-main/tests/integration/: test_end_to_end.py
llm_llama3/geo-bronze-main/tests/unit/: test_collectors_http.py  test_collectors_ogc.py  test_manager.py  test_validation.py
llm_mistral/geo-bronze-main/: .env.example  Dockerfile  README.md
llm_mistral/geo-bronze-main/.claude/: settings.json
(+32 files in other folders)
