[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geo-bronze"
version = "0.1.0"
description = "Multi-agent system for automated collection of open geospatial data into bronze layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "minio>=7.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.2",
    "anyio>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "moto[s3]>=5.0.0",
    "boto3>=1.35.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
geo-bronze = "geo_bronze.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_bronze"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/geo_bronze"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
